# ChangeLog for net-misc/asterisk
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.398 2012/06/06 10:07:45 chainsaw Exp $

*asterisk-10.5.0 (06 Jun 2012)
*asterisk-1.8.13.0 (06 Jun 2012)

  06 Jun 2012; Tony Vroon <chainsaw@gentoo.org> +files/1.8.0/find_call_ids.sh,
  +files/1.8.0/find_call_sip_trace.sh, +asterisk-1.8.13.0.ebuild,
  +asterisk-10.5.0.ebuild:
  Bugfix releases on both the 1.8 & 10 branches, squelches a warning with bind
  address set to "any", prevents an overflow on 32-bit systems for
  ast_tvdiff_ms calculation and various rerouting/transfer fixes. Updated
  helper scripts by Jaco Kroon, closes bug #414585.

  30 May 2012; Agostino Sarubbo <ago@gentoo.org> -asterisk-1.8.11.1.ebuild:
  Remove old

  30 May 2012; Agostino Sarubbo <ago@gentoo.org> asterisk-1.8.12.1.ebuild:
  Stable for amd64, wrt bug #418189

  30 May 2012; Jeff Horelick <jdhore@gentoo.org> asterisk-1.8.12.1.ebuild:
  marked x86 per bug 418189

*asterisk-10.4.1 (29 May 2012)
*asterisk-1.8.12.1 (29 May 2012)

  29 May 2012; Tony Vroon <chainsaw@gentoo.org> -asterisk-1.8.12.0.ebuild,
  +asterisk-1.8.12.1.ebuild, -asterisk-10.3.1.ebuild, -asterisk-10.4.0.ebuild,
  +asterisk-10.4.1.ebuild:
  Security updates in the 1.8 & 10 branches for an IAX2 remote crash, bug
  #418189 (AST-2012-007/CVE-2012-2947) and an SCCP channel driver remote crash,
  bug #418191 (AST-2012-008/CVE-2012-2948). Both filed by Rajiv Aaron Manglani.
  Removed vulnerable ebuilds up to last stable.

  25 May 2012; Samuli Suominen <ssuominen@gentoo.org> asterisk-1.8.11.1.ebuild,
  asterisk-1.8.12.0.ebuild, asterisk-10.3.1.ebuild, asterisk-10.4.0.ebuild:
  Pull in SLOT="0" of virtual/libusb because libusb-1 is not supported.

  22 May 2012; Samuli Suominen <ssuominen@gentoo.org> asterisk-1.8.11.1.ebuild,
  asterisk-1.8.12.0.ebuild, asterisk-10.3.1.ebuild, asterisk-10.4.0.ebuild:
  Use virtual/libusb instead of dev-libs/libusb.
