@@ -14,22 +14,19 @@ AUX 1.8.0/find_call_ids.sh 1078 RMD160 094d2f014fa6570aaab2eecf3e20bb89788b0f22 
 AUX 1.8.0/find_call_sip_trace.sh 1115 RMD160 a9f2782feabc2866bd8476779f69d3d97aa0a7c0 SHA1 69f323eb23db20feec17e5d6dba8861d52856d14 SHA256 e1ebeb1dab05f552f89f380719d319cdf579cb6aeb86a9010e13e14c57f55985
 DIST asterisk-1.8.12.1.tar.gz 25089535 RMD160 7dfacbdcc178100e71d39ea3157b81b7b4bf2ae8 SHA1 b09fb86bfb6f157e65c892da794e07111240ad73 SHA256 413d65f5a647b8dd946cdedb1a835cea5f898f67157615ff159f5f64d8e90faf
 DIST asterisk-1.8.13.0.tar.gz 25059587 RMD160 f1ce05e56a61e3b4215dd7b9fc3f8331bf70486b SHA1 9c45a16d99a5ea1d73e88b3556d9ee5b2afa594b SHA256 578c46cef13ccc17e201e4cce50b21bf9e2fbd9516c69e7529ac0b43b1c041e1
-DIST asterisk-10.4.1.tar.gz 25009227 RMD160 0e9fffb4dab860febd0382e86527eb9835f1f9a8 SHA1 12e41de049ba64ddcc290b39d1728b8c78c7d41b SHA256 8b90898961319f5c947cdd9ecd472c677a7b9dcd2732ff34a8318fc7725c8bde
-DIST asterisk-10.5.0.tar.gz 24980521 RMD160 cde557a9e2041881e364061bb4f59a165b929acd SHA1 8f44a57c67f8c8e01098b0de61dfd82cdf837c25 SHA256 0ac487ed88f798e4ed964ea4c46063572589864cdf7c839b6a040ff60d958178
+DIST asterisk-10.5.1.tar.gz 24970486 RMD160 3e4e371a7bd533242c806bf683f0d1ad9afdeb70 SHA1 f927384456aaadc6990730927644f162b7e50536 SHA256 2d75184a25fc1cac80c1eacdb1cec3f1538cc7be16f1601daa46f06994f01ce5
 DIST gentoo-asterisk-patchset-1.12.tar.bz2 30340 RMD160 b4e65e60f98cb5d125ecf6ca44c0526ebfc7c8d2 SHA1 213a501b3d0c08b48e545fe91c9282c79f3aa33d SHA256 42540637a94c127aee5028650c6f8695a30930d074a4ec25214c17053e35c257
 DIST gentoo-asterisk-patchset-1.13.tar.bz2 30353 RMD160 8649e15f7bf3766e4aaf5426559f71673d8a52b3 SHA1 873a8b80f670c7889271fc838e64988e654a78b8 SHA256 de4d9b4ab9c2d403077cb575e08c33d7320a38da48e1af1cbc545fea34f5c7f5
-DIST gentoo-asterisk-patchset-2.4.tar.bz2 7083 RMD160 0d82c7837ea6008dc442168af841ab00cc79a57c SHA1 750bfca96e7c8695cb82988b4c0da92409f0ce3e SHA256 fb26b569ea2cf020d5da0957856a6b5c8fbdfd083ad09b39c8cec2a8807814a2
 DIST gentoo-asterisk-patchset-2.5.tar.bz2 5839 RMD160 b3f226d89c39f4a0ca769618bc7cd06419fe8be7 SHA1 a7cbb5f8ab8f908c81bc22ef6cd1caa5e4d91949 SHA256 f67f262ab907213e6ae355923cc57d2065029f216ccebf18044ffb7f31303ced
 EBUILD asterisk-1.8.12.1.ebuild 8502 RMD160 29cffb42bd275f35e9f52a85c91e4c49f1bfd79f SHA1 03f67abcd328f4a1f4e29a1b2433fc83513dfe57 SHA256 9841979a176814a61223cc7904709a26031eeb2e6fa0eae655dc1be993c6574c
 EBUILD asterisk-1.8.13.0.ebuild 8520 RMD160 9f2dbad9a6eb9cb204faa62dfaa8d46839d565eb SHA1 42c0d0e426fc2b87688fb3e1b68e23547f759c42 SHA256 c105b6aaf990e8a9831d5b8f3f352374083af7e83663a5433fec8db4d04fd9e6
-EBUILD asterisk-10.4.1.ebuild 8584 RMD160 3216de1eea7f153e871d11b8da4a1e80c73fa90b SHA1 07b2c54ee3f163a194a1c03474e62228337e4eaf SHA256 c9600a6f65b2113da05a431f54231dfc6a8d7c69a0e10f04fd81afd98b55cb8f
-EBUILD asterisk-10.5.0.ebuild 8584 RMD160 cddf090190ea268df89f6de5a089fa929f6d29f3 SHA1 e503b95e4f897c296255ef00996a5f1501d02e0e SHA256 b95488ea2e6aeec70f3794c44fb2e05e208a836d6319761228219ceebe9e0fde
-MISC ChangeLog 103093 RMD160 2e57d12daf8d62e14868f65369f69f418cd22854 SHA1 54e06eccf84bbd38b471dcd0ea27156a3a786df3 SHA256 eb414d5a9ad7806ea198ef6c90d914821744cf8be1a198a5ef08dd6475593b34
+EBUILD asterisk-10.5.1.ebuild 8584 RMD160 5732f9ba409d8409f9a66753799919130bbf1a5e SHA1 011acca2a13c406c9ede3ecac34c7854e8dfd849 SHA256 6d781516ff77a4f6318734a49907ff531aaa7aff21e773532caa9d5eb78e80c8
+MISC ChangeLog 103416 RMD160 955f08aa6c28def394cf24d35a0265c1666f0d0e SHA1 d4f7f188ed44e510398f04b0a6301da262732019 SHA256 86b3cd60f9da99efc7eab9ef7114e702852e9c5ed996c62c11c81ec9500b1b36
 MISC metadata.xml 1028 RMD160 5b59e20d3efbe652abf786d05a7b9744105a088b SHA1 e718c3ce0210047b34a05c92ff8a7b4707316e17 SHA256 63267079fefbcc798d902e6b9822609df79c756a9934c3ad3abdabfbad357de5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk/PLAMACgkQp5vW4rUFj5qlNgCfbaq15voa9CrHRMY5QDkg3Dve
-+z0An2xfGXCJ8Q3P1y1TtML5cFvd7Dzd
-=dpwF
+iEYEARECAAYFAk/bFdYACgkQp5vW4rUFj5qbNACfRrkAuV5IM7hE+3X1f0T65jC/
+aGcAoL6bAxUrFTDeS9txqq52F2fC58Sh
+=dWrH
 -----END PGP SIGNATURE-----
